--- a/Web App/index.html
+++ b/Web App/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE HTML>
+<!--
+	Alpha by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Veteran Finder</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href= "/static/assets/css/main.css" %} />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body class ="landing">
+		<div id="page-wrapper">
+      	<!-- Header -->
+				<header id="header">
+					<h1>Vet Finder</h1>
+					<nav id="nav">
+						<ul>
+							<li><a href="/">Home</a></li>
+              <li><a href="/sign_in" class="button">Log out</a></li>
+						</ul>
+					</nav>
+				</header>
+		</div>
+		<div>
+			<h3 class="header"> Veteran List </h3>
+			<ul>
+				<!-- Show list of veterans here, database supported.  Sort by location,
+				most recently added-->
+			</ul>
+		</div>
 
+<!-- Footer -->
+  <footer id="footer">
+    <ul class="copyright">
+      <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+    </ul>
+  </footer>
+
+</div>
+
+<!-- Scripts -->
+<script src="/static/assets/js/jquery.min.js"></script>
+<script src="/static/assets/js/jquery.dropotron.min.js"></script>
+<script src="/static/assets/js/jquery.scrollgress.min.js"></script>
+<script src="/static/assets/js/skel.min.js"></script>
+<script src="/static/assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="/static/assets/js/main.js"></script>
+
+</body>
+</html>
